--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 config.py
 
+Module 8.ipynb
+Pg admin TRUNCATE CODE.sql
+challenge.py.ipynb
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
